--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
             <h1>Dashboard</h1>
           </div>
           <div class="header-right">
+            <!-- Nút chuyển dark/light -->
+            <button
+              id="theme-toggle"
+              class="theme-btn"
+              title="Chuyển chế độ sáng/tối"
+            >
+              <i class="far fa-mon"></i>
+            </button>
             <!-- Admin Profile -->
             <div class="admin-profile">
               <div class="admin-avatar">
