--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
           <div class="charts-section">
             <div class="chart-card ticket-sales">
               <div class="chart-header">
-                <h3>Số vé bán ra</h3>
+                <h3>Tickets Sold</h3>
                 <div class="chart-toggles">
                   <button class="toggle-btn active">Daily</button>
                   <button class="toggle-btn">Weekly</button>
                 </div>
               </div>
               <div class="chart-content">
-                <div class="chart-value">5000 Vé đã được bán</div>
+                <div class="chart-value">Total tickets sold: 5,000</div>
                 <div class="chart-container">
                   <canvas id="ticketSalesChart"></canvas>
                 </div>
