cấu trúc thư mục

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lotus Travel Admin</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
@@ -323,7 +323,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="route-item highlighted">
+                <div class="route-item">
                   <div class="route-info">
                     <h4>Hà Nội (HAN) - Đà Nẵng (DAD)</h4>
                     <p>11,062 km</p>
@@ -379,6 +379,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="app.js"></script>
+    <script src="assets/js/app.js"></script>
   </body>
 </html>
