first update Oct 26

--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
             <div class="nav__header">
                 <div class="nav__logo">
                     <a href="#" class="logo">Lotus Travel</a>
-                    <p class="tagline">From Low Cost To High Trust</p>
+                    <p>From Low Cost To High Trust</p>
                 </div>
             </div>
-            <ul class="nav__links" id="nav-links">
-            </ul>
             <div class="nav__btns">
                 <button class="btn">Đăng nhập</button>
             </div>
@@ -44,7 +42,6 @@
                     <div class="content-row">
                         <div class="booking-group">
                             <label>Từ</label>
-                            <!-- <input type="text" placeholder="Hà Nội (HAN)"> -->
                             <select id="from" name="from">
                                 <option value="SGN">TP HCM (SGN)</option>
                                 <option value="HAN">Hà Nội (HAN)</option>
@@ -61,7 +58,6 @@
 
                         <div class="booking-group">
                             <label>Đến</label>
-                            <!-- <input type="text" placeholder="TP. Hồ Chí Minh (SGN)"> -->
                             <select id="to" name="to">
                                 <option value="SGN">TP HCM (SGN)</option>
                                 <option value="HAN">Hà Nội (HAN)</option>
@@ -126,7 +122,7 @@
                         </div>
 
                         <div class="booking-group">
-                            <button type="submit" class="btn" id="find-flight-btn">Tìm chuyến bay</button>
+                            <button type="submit" class="btn">Tìm chuyến bay</button>
                         </div>
                     </div>
                 </form>
