--- a/pages/passenger-info.html
+++ b/pages/passenger-info.html
@@ -62,9 +62,9 @@
                 <div class="service-details" id="baggage-options" style="display: none;">
                     <select name="baggage-weight">
                         <option value="">-- Chọn gói hành lý --</option>
-                        <option value="20kg">20kg - 260.000 VND</option>
-                        <option value="30kg">30kg - 390.000 VND</option>
-                        <option value="40kg">40kg - 520.000 VND</option>
+                        <option value="20kg" data-price="260000">20kg - 260.000 VND</option>
+                        <option value="30kg" data-price="390000">30kg - 390.000 VND</option>
+                        <option value="40kg" data-price="520000">40kg - 520.000 VND</option>
                     </select>
                 </div>
             </div>
@@ -77,10 +77,10 @@
                 <div class="service-details" id="meal-options" style="display: none;">
                     <select name="meal-type">
                         <option value="">-- Chọn suất ăn --</option>
-                        <option value="tieuchuan">Suất ăn tiêu chuẩn</option>
-                        <option value="chay">Suất ăn chay</option>
-                        <option value="thuong">Suất ăn cho trẻ sơ sinh và trẻ em</option>
-                        <option value="dacbiet">Suất ăn đặc biệt</option>
+                        <option value="tieuchuan" data-price="120000">Suất ăn tiêu chuẩn - 120.000 VND</option>
+                        <option value="chay" data-price="130000">Suất ăn chay - 130.000 VND</option>
+                        <option value="thuong" data-price="100000">Suất ăn cho trẻ sơ sinh và trẻ em - 100.000 VND</option>
+                        <option value="dacbiet" data-price="150000">Suất ăn đặc biệt - 150.000 VND</option>
                     </select>
                 </div>
             </div>
