--- a/pages/payment.html
+++ b/pages/payment.html
@@ -8,7 +8,18 @@
 </head>
 
 <body>
-    <h2>Xác nhận thông tin</h2>
+  <div class="container">
+    <h1>Thanh toán</h1>
+    <section class="flight-info">
+      <h2>Xác nhận thông tin</h2>
+      <div id="flight-details" class="info-box"></div>
+    </section>
 
-    <button id="confirmFlight">Xác nhận giao dịch</button>
+    <section class="service">
+      <h2>Dịch vụ bổ sung</h2>
+      <div id="cost-summary"></div>
+    </section>
+  </div>
+
+  <button id="confirmFlight">Xác nhận giao dịch</button>
 </body>
