first update Oct 27

--- a/pages/passenger-info.html
+++ b/pages/passenger-info.html
@@ -16,11 +16,11 @@
             <div class="passenger-info">
                 <h2>Thông tin cơ bản</h2>
                 <div class="note">
-                   <p>* là các trường bắt buộc.</p>
-                   <p>Vui lòng điền thông tin cá nhân như trong hộ chiếu.</p> 
+                    <p>* là các trường bắt buộc.</p>
+                    <p>Vui lòng điền thông tin cá nhân như trong hộ chiếu.</p>
                 </div>
             </div>
-            
+
             <label for="title">Danh xưng *</label>
             <select id="title" name="title" required>
                 <option value="Mr">Ông</option>
@@ -49,7 +49,7 @@
             <input type="number" id="phonenumber" name="phonenumber" placeholder="Số điện thoại"
                 pattern="^[0-9+]{8,15}$" required>
 
-        
+
             <div class="passenger-info">
                 <h2>Các dịch vụ bổ sung</h2>
             </div>
@@ -77,10 +77,10 @@
                 <div class="service-details" id="meal-options" style="display: none;">
                     <select name="meal-type">
                         <option value="">-- Chọn suất ăn --</option>
-                        <option value="tieuchuan" data-price="120000">Suất ăn tiêu chuẩn - 120.000 VND</option>
-                        <option value="chay" data-price="130000">Suất ăn chay - 130.000 VND</option>
-                        <option value="thuong" data-price="100000">Suất ăn cho trẻ sơ sinh và trẻ em - 100.000 VND</option>
-                        <option value="dacbiet" data-price="150000">Suất ăn đặc biệt - 150.000 VND</option>
+                        <option value="Tiêu chuẩn" data-price="120000">Suất ăn tiêu chuẩn - 120.000 VND</option>
+                        <option value="Chay" data-price="130000">Suất ăn chay - 130.000 VND</option>
+                        <option value="Thường" data-price="100000">Suất ăn cho trẻ sơ sinh và trẻ em - 100.000 VND</option>
+                        <option value="Đặc biệt" data-price="150000">Suất ăn đặc biệt - 150.000 VND</option>
                     </select>
                 </div>
             </div>
