--- a/pages/payment.html
+++ b/pages/payment.html
@@ -23,9 +23,11 @@
 
       <div class="payment-method">
         <h2>Phương thức thanh toán</h2>
-        <label><input type="radio" name="payment-method" value="atm" checked>Thẻ ATM nội địa (NAPAS)</label>
-        <label><input type="radio" name="payment-method" value="visa">Thẻ tín dụng, thẻ ghi nợ quốc tế (Visa/
-          Mastercard)</label>
+        <div class="select-method">
+          <label><input type="radio" name="payment-method" value="atm" checked>Thẻ ATM nội địa (NAPAS)</label>
+          <label><input type="radio" name="payment-method" value="visa">Thẻ tín dụng, thẻ ghi nợ quốc tế
+            (Visa/Mastercard)</label>
+        </div>
       </div>
 
     </div>
