--- a/pages/passenger-info.html
+++ b/pages/passenger-info.html
@@ -55,9 +55,9 @@
             </div>
 
             <div class="service-items">
-                <div class="baggage label">
+                <div class="baggage-label">
+                    <span>Thêm hành lý ký gửi</span>
                     <input type="checkbox" name="baggage" id="baggage">
-                    Thêm hành lý ký gửi
                 </div>
                 <div class="service-details" id="baggage-options" style="display: none;">
                     <select name="baggage-weight">
@@ -70,9 +70,9 @@
             </div>
 
             <div class="service-item">
-                <div class="meal label">
+                <div class="meal-label">
+                    <span>Thêm suất ăn trên máy bay</span>
                     <input type="checkbox" name="meal" id="meal">
-                    Thêm suất ăn trên máy bay
                 </div>
                 <div class="service-details" id="meal-options" style="display: none;">
                     <select name="meal-type">
