first update Oct 31

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Thanh toán vé máy bay</h1>
+  <h1>Thanh toán</h1>
   <section class="payment">
     <div class="payment-info">
       <div class="flight-info">
@@ -17,7 +17,7 @@
       </div>
 
       <div class="service">
-        <h2>Dịch vụ bổ sung</h2>
+        <h2>Chi tiết giá vé</h2>
         <div id="cost-summary"></div>
       </div>
 
@@ -31,6 +31,7 @@
       </div>
 
     </div>
+
   </section>
   <button id="pay-button">Xác nhận giao dịch</button>
 
