first update Dec 6

--- a/pages/payment.html
+++ b/pages/payment.html
@@ -31,9 +31,17 @@
       </div>
 
     </div>
-
   </section>
   <button id="pay-button">Xác nhận giao dịch</button>
+
+  <div id="qr-modal" class="modal">
+    <div class="modal-content">
+      <h2>Quét mã QR để thanh toán</h2>
+      <img id="qr-image" src="" alt="QR Code">
+      <p>Vui lòng quét mã để hoàn tất giao dịch</p>
+      <button id="close-qr">Đóng</button>
+    </div>
+  </div>
 
   <script src="../javascript/payment.js"></script>
 </body>
