--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lotus Travel Admin</title>
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="style/styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
       rel="stylesheet"
@@ -14,99 +14,15 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body data-page-title="Dashboard">
     <div class="dashboard-container">
-      <!-- Sidebar -->
-      <aside class="sidebar">
-        <div class="sidebar-header">
-          <h2 class="logo">Lotus Travel</h2>
-          <button class="menu-toggle">
-            <i class="fas fa-bars"></i>
-          </button>
-        </div>
-
-        <nav class="sidebar-nav">
-          <ul>
-            <li class="active">
-              <a href="#dashboard">
-                <i class="fas fa-chart-pie"></i>
-                <span>Dashboard</span>
-              </a>
-            </li>
-            <li>
-              <a href="#booking">
-                <i class="fas fa-calendar-check"></i>
-                <span>Booking</span>
-              </a>
-            </li>
-            <li>
-              <a href="#flight-tracking">
-                <i class="fas fa-plane"></i>
-                <span>Flight Tracking</span>
-              </a>
-            </li>
-            <li>
-              <a href="#service">
-                <i class="fas fa-concierge-bell"></i>
-                <span>Service</span>
-              </a>
-            </li>
-            <li>
-              <a href="#feedback">
-                <i class="fas fa-comment-dots"></i>
-                <span>Feedback</span>
-              </a>
-            </li>
-            <li>
-              <a href="#promotion">
-                <i class="fas fa-gift"></i>
-                <span>Promotion</span>
-              </a>
-            </li>
-            <li>
-              <a href="#managers">
-                <i class="fas fa-users-cog"></i>
-                <span>Managers</span>
-              </a>
-            </li>
-            <li>
-              <a href="#logout">
-                <i class="fas fa-sign-out-alt"></i>
-                <span>Log out</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </aside>
+      <!-- Sidebar Component -->
+      <div id="sidebar-container"></div>
 
       <!-- Main Content -->
       <main class="main-content">
-        <!-- Header -->
-        <header class="main-header">
-          <div class="header-left">
-            <h1>Dashboard</h1>
-          </div>
-          <div class="header-right">
-            <!-- Nút chuyển dark/light -->
-            <button
-              id="theme-toggle"
-              class="theme-btn"
-              title="Chuyển chế độ sáng/tối"
-            >
-              <i class="far fa-mon"></i>
-            </button>
-            <!-- Admin Profile -->
-            <div class="admin-profile">
-              <div class="admin-avatar">
-                <i class="fas fa-user"></i>
-              </div>
-              <div class="admin-info">
-                <h4>Admin</h4>
-                <p>admin@lotustravel.com</p>
-              </div>
-            </div>
-          </div>
-        </header>
+        <!-- Header Component -->
+        <div id="header-container"></div>
 
         <!-- Dashboard Content -->
         <div class="dashboard-content">
@@ -379,6 +295,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script src="js/components.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
