--- a/pages/payment.html
+++ b/pages/payment.html
@@ -21,14 +21,14 @@
         <div id="cost-summary"></div>
       </div>
 
-      <div class="payment-method">
+      <!-- <div class="payment-method">
         <h2>Phương thức thanh toán</h2>
         <div class="select-method">
           <label><input type="radio" name="payment-method" value="atm" checked>Thẻ ATM nội địa (NAPAS)</label>
           <label><input type="radio" name="payment-method" value="visa">Thẻ tín dụng, thẻ ghi nợ quốc tế
             (Visa/Mastercard)</label>
         </div>
-      </div>
+      </div> -->
 
     </div>
   </section>
