second update Dec 15

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Tìm chuyến bay</title>
+  <title>Tìm chuyến bay | Lotus Travel</title>
   <link rel="stylesheet" href="../style/booking.css">
 </head>
 
