--- a/pages/checkin.html
+++ b/pages/checkin.html
@@ -2,13 +2,13 @@
 <html lang="vi">
 <head>  
     <meta charset="UTF-8">
-    <title>Checkin online</title>
-    <link rel="stylesheet" href="style/booking.css">
+    <title>Làm thủ tục | Lotus Travel</title>
+    <link rel="stylesheet" href="../style/checkin.css">
 </head>
 
 <body>
     <section class="checkin-container">
-        <h2>Thông tin làm thủ tục</h2>
+        <!-- <h2>Thông tin chuyến bay</h2> -->
         <div id="checkin-detail"></div>
         <button class="btn" id="btn-confirm-checkin">
             Xác nhận làm thủ tục lên máy bay
