--- a/pages/passenger-info.html
+++ b/pages/passenger-info.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Thông tin hành khách</title>
+    <title>Thông tin hành khách | Lotus Travel</title>
     <link rel="stylesheet" href="../style/passenger-info.css">
 </head>
 
