--- a/pages/seat-selection.html
+++ b/pages/seat-selection.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Chọn chỗ ngồi</title>
+  <title>Chọn chỗ ngồi | Lotus Travel</title>
   <link rel="stylesheet" href="../style/seat-selection.css">
 </head>
 
