second update Dec 16

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 </head>
 
 <body>
-    <div class="hero__section">
+    <div class="hero_section">
         <nav>
-            <div class="nav__header">
-                <div class="nav__logo">
-                    <a href="#" class="logo">Lotus Travel</a>
-                    <p>From Low Cost To High Trust</p>
+            <div class="nav_header">
+                <div class="nav_logo">
+                    <a href="index.html" class="logo">
+                        <img src="assets/Lotus_Logo-removebg-preview.png">
+                        <div class="logo-text">
+                            <span class="brand">Lotus Travel</span>
+                            <span class="slogan">From Low Cost To High Trust</span>
+                        </div>
+                    </a>
                 </div>
             </div>
-            <div class="nav__btns">
+            <div class="nav_btns">
                 <button class="btn">Đăng nhập</button>
             </div>
         </nav>
@@ -170,15 +175,15 @@
     </div>
 
 
-    <section class="section__container destination__container" id="about">
-        <h2 class="section__header">Điểm đến phổ biến</h2>
-        <p class="section__description">
+    <section class="section_container destination_container" id="about">
+        <h2 class="section_header">Điểm đến phổ biến</h2>
+        <p class="section_description">
             Các địa điểm được nhiều hành khách lựa chọn để trải nghiệm
         </p>
-        <div class="destination__grid">
-            <div class="destination__card">
+        <div class="destination_grid">
+            <div class="destination_card">
                 <img src="assets/lang-ho-chu-tich.jpg" alt="destination" />
-                <div class="destination__card__details">
+                <div class="destination_card_details">
                     <div>
                         <h4>Lăng Chủ tịch Hồ Chí Minh</h4>
                         <p>Hà Nội</p>
@@ -186,9 +191,9 @@
                     </div>
                 </div>
             </div>
-            <div class="destination__card">
+            <div class="destination_card">
                 <img src="assets/dinh-doc-lap.jpg" alt="destination" />
-                <div class="destination__card__details">
+                <div class="destination_card_details">
                     <div>
                         <h4>Dinh Độc Lập</h4>
                         <p>Thành phố Hồ Chí Minh</p>
@@ -196,9 +201,9 @@
                     </div>
                 </div>
             </div>
-            <div class="destination__card">
+            <div class="destination_card">
                 <img src="assets/bao-tang-lich-su-quan-su.jpg" alt="destination" />
-                <div class="destination__card__details">
+                <div class="destination_card_details">
                     <div>
                         <h4>Bảo tàng Lịch sử Quân sự Việt Nam</h4>
                         <p>Hà Nội</p>
@@ -209,11 +214,11 @@
         </div>
     </section>
 
-    <section class="section__container showcase__container" id="package">
-        <div class="showcase__image">
+    <section class="section_container showcase_container" id="package">
+        <div class="showcase_image">
             <img src="assets/ban-do-viet-nam.jpg" alt="showcase" />
         </div>
-        <div class="showcase__content">
+        <div class="showcase_content">
             <h4>Lotus Travel</h4>
             <p>
                 Ra đời với sứ mệnh kết nối trái tim Việt trên mọi vùng trời tổ quốc, Lotus
@@ -231,7 +236,7 @@
                     Đặt chân lên tất cả mọi miền là ước mơ ta ước hoài."
                 </i>
             </p>
-            <div class="showcase__btn">
+            <div class="showcase_btn">
                 <button class="btn">
                     Đặt vé ngay thôi
                     <span><i class="ri-arrow-right-line"></i></span>
@@ -240,21 +245,21 @@
         </div>
     </section>
 
-    <section class="feedback section__container" id="feedback">
-        <h2 class="section__header">Phản hồi từ khách hàng</h2>
-        <p class="section__description">
+    <section class="feedback section_container" id="feedback">
+        <h2 class="section_header">Phản hồi từ khách hàng</h2>
+        <p class="section_description">
             Xin được gửi lời cảm ơn chân thành và sâu sắc đến quý hành khách đã lựa chọn Lotus Travel như
             người bạn đồng hành trong mỗi chuyến đi
         </p>
 
-        <div class="feedback__grid">
-            <div class="feedback__card">
-                <div class="feedback__rating">
+        <div class="feedback_grid">
+            <div class="feedback_card">
+                <div class="feedback_rating">
                     <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
                         class="ri-star-fill"></i><i class="ri-star-fill"></i>
                 </div>
                 <p>Dịch vụ tốt, phản hồi yêu cầu của khách hàng nhanh.</p>
-                <div class="feedback__user">
+                <div class="feedback_user">
                     <img src="assets/avt2.jpg" alt="client">
                     <div>
                         <h4>Trần Long Thiên Kim</h4>
@@ -263,13 +268,13 @@
                 </div>
             </div>
 
-            <div class="feedback__card">
-                <div class="feedback__rating">
+            <div class="feedback_card">
+                <div class="feedback_rating">
                     <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
                         class="ri-star-fill"></i><i class="ri-star-fill"></i>
                 </div>
                 <p>Giao diện đẹp, dễ sử dụng, nhiều lịch bay.</p>
-                <div class="feedback__user">
+                <div class="feedback_user">
                     <img src="assets/avatar2.jpg" alt="client">
                     <div>
                         <h4>Võ Khánh Tường</h4>
@@ -278,13 +283,13 @@
                 </div>
             </div>
 
-            <div class="feedback__card">
-                <div class="feedback__rating">
+            <div class="feedback_card">
+                <div class="feedback_rating">
                     <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
                         class="ri-star-fill"></i><i class="ri-star-fill"></i>
                 </div>
                 <p>Mong Lotus Travel ngày càng phát triển để phát huy tiềm năng du lịch Việt tốt hơn nữa.</p>
-                <div class="feedback__user">
+                <div class="feedback_user">
                     <img src="assets/avatar3.jpg" alt="client">
                     <div>
                         <h4>Phạm Yến Nhi</h4>
@@ -293,13 +298,13 @@
                 </div>
             </div>
 
-            <div class="feedback__card">
-                <div class="feedback__rating">
+            <div class="feedback_card">
+                <div class="feedback_rating">
                     <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
                         class="ri-star-fill"></i><i class="ri-star-fill"></i>
                 </div>
                 <p>Khá thích Lotus Travel, đặt vé dễ, cập nhật trạng thái chuyến bay nhanh.</p>
-                <div class="feedback__user">
+                <div class="feedback_user">
                     <img src="assets/avatar4.jpg" alt="client">
                     <div>
                         <h4>Phạm Minh Khanh</h4>
@@ -308,15 +313,15 @@
                 </div>
             </div>
 
-            <div class="feedback__card">
-                <div class="feedback__rating">
+            <div class="feedback_card">
+                <div class="feedback_rating">
                     <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
                         class="ri-star-fill"></i><i class="ri-star-fill"></i>
                 </div>
                 <p>Recommend mua vé ở đây nhé. Mỗi lần đi du lịch mình đều đặt vé ở đây,
                     siêu hài lòng với dịch vụ chăm sóc khách hàng của Lotus.
                 </p>
-                <div class="feedback__user">
+                <div class="feedback_user">
                     <img src="assets/avatar5.jpg" alt="client">
                     <div>
                         <h4>Lý Tố Như</h4>
@@ -325,13 +330,13 @@
                 </div>
             </div>
 
-            <div class="feedback__card">
-                <div class="feedback__rating">
+            <div class="feedback_card">
+                <div class="feedback_rating">
                     <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
                         class="ri-star-fill"></i><i class="ri-star-fill"></i>
                 </div>
                 <p>5 sao</p>
-                <div class="feedback__user">
+                <div class="feedback_user">
                     <img src="assets/avt3.jpg" alt="client">
                     <div>
                         <h4>Trần Long Phương Nghi</h4>
@@ -344,16 +349,17 @@
 
 
     <footer id="contact">
-        <div class="section__container footer__container">
-            <div class="footer__col">
-                <div class="footer__logo">
-                    <a href="#" class="logo">Lotus Travel</a>
+        <div class="section_container footer_container">
+            <div class="footer_col">
+                <div class="footer_logo">
+                    <img src="assets/Lotus_Logo-removebg-preview.png">
+                    <p><strong>Lotus Travel</strong></p>
                 </div>
             </div>
 
-            <div class="footer__col">
+            <div class="footer_col">
                 <h4>Liên hệ</h4>
-                <ul class="footer__links">
+                <ul class="footer_links">
                     <li>
                         <span><i class="ri-phone-fill"></i> +84 90909090</span>
                     </li>
@@ -367,14 +373,14 @@
             </div>
 
             <div class="sponsor">
-                <div class="logo__sponsors">
+                <div class="logo_sponsors">
                     <img src="assets/logo-world-travel-awards.png" alt="logo1">
                     <img src="assets/logo-skyrax.png" alt="logo2">
                     <img src="assets/logo-hus.png" alt="logo3">
                 </div>
             </div>
         </div>
-        <div class="footer__bar">
+        <div class="footer_bar">
             © 2025 Lotus Team, a project for MAT3385, HUS - VNU
         </div>
     </footer>
