--- a/pages/booking.html
+++ b/pages/booking.html
@@ -8,12 +8,22 @@
 </head>
 
 <body>
-  <h1>Vui lòng chọn chuyến đi</h1>
-  <div class="select_flight">
-    <div id="flight-list" class="flight-list"></div>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="../javascript/booking.js"></script>
+  <header class="site-header">
+    <a href="../index.html" class="logo">
+      <img src="../assets/Lotus_Logo-removebg-preview.png">
+      <span>Lotus Travel</span>
+    </a>
+  </header>
+
+  <main class="page-content">
+    <h1>Vui lòng chọn chuyến đi</h1>
+    <div class="select_flight">
+      <div id="flight-list" class="flight-list"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+    <script src="../javascript/booking.js"></script>
+  </main>
 </body>
+
 
 </html>
