third update Dec 16

--- a/index.html
+++ b/index.html
@@ -237,10 +237,10 @@
                 </i>
             </p>
             <div class="showcase_btn">
-                <button class="btn">
-                    Đặt vé ngay thôi
-                    <span><i class="ri-arrow-right-line"></i></span>
-                </button>
+                <a href="#top" class="btn">
+                        Đặt vé ngay thôi
+                        <span><i class="ri-arrow-right-line"></i></span>
+                </a>
             </div>
         </div>
     </section>
