--- a/pages/checkin.html
+++ b/pages/checkin.html
@@ -7,13 +7,22 @@
 </head>
 
 <body>
-    <section class="checkin-container">
+    <header class="site-header">
+    <a href="../index.html" class="logo">
+      <img src="../assets/Lotus_Logo-removebg-preview.png">
+      <span>Lotus Travel</span>
+    </a>
+    </header>
+
+    <main class="page-content">
+        <section class="checkin-container">
         <!-- <h2>Thông tin chuyến bay</h2> -->
         <div id="checkin-detail"></div>
         <button class="btn" id="btn-confirm-checkin">
             Xác nhận làm thủ tục lên máy bay
         </button>
     </section>
+    </main>
 
     <script src="../javascript/checkin.js"></script>
 </body>
