--- a/pages/managebooking.html
+++ b/pages/managebooking.html
@@ -7,10 +7,18 @@
 </head>
 
 <body>
-    <section class="managebooking-container">
-        <h2>Thông tin chuyến bay</h2>
-        <div id="managebooking-detail"></div>
-    </section>
+    <header class="site-header">
+    <a href="../index.html" class="logo">
+      <img src="../assets/Lotus_Logo-removebg-preview.png">
+      <span>Lotus Travel</span>
+    </a>
+    </header>
+    <div class="page-content">
+        <section class="managebooking-container">
+            <h2>Thông tin chuyến bay</h2>
+            <div id="managebooking-detail"></div>
+        </section>
+    </div>
 
     <script src="../javascript/managebooking.js"></script>
 </body>
