--- a/pages/passenger-info.html
+++ b/pages/passenger-info.html
@@ -9,9 +9,17 @@
 
 
 <body>
+    <header class="site-header">
+    <a href="../index.html" class="logo">
+      <img src="../assets/Lotus_Logo-removebg-preview.png">
+      <span>Lotus Travel</span>
+    </a>
+    </header>
+
+    <main class="page-content">
     <h1>Nhập thông tin hành khách</h1>
 
-    <section class="passenger-infomation">
+    <section class="passenger-information">
         <form class="passenger-info-form">
             <div class="passenger-info">
                 <h2>Thông tin cơ bản</h2>
@@ -88,6 +96,8 @@
             <button type="submit" id="nextButton">Tiếp tục chọn chỗ ngồi</button>
         </form>
     </section>
+
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
     <script src="../javascript/passenger-info.js"></script>
