--- a/pages/payment.html
+++ b/pages/payment.html
@@ -8,7 +8,14 @@
 </head>
 
 <body>
-  <h1>Thanh toán</h1>
+  <header class="site-header">
+    <a href="../index.html" class="logo">
+      <img src="../assets/Lotus_Logo-removebg-preview.png">
+      <span>Lotus Travel</span>
+    </a>
+  </header>
+  <div class="page-content">
+    <h1>Thanh toán</h1>
   <section class="payment">
     <div class="payment-info">
       <div class="flight-info">
@@ -42,6 +49,8 @@
       <button id="close-qr">Đóng</button>
     </div>
   </div>
+  </div>
+
 
   <script src="../javascript/payment.js"></script>
 </body>
