--- a/pages/seat-selection.html
+++ b/pages/seat-selection.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-  <h1>Chọn chỗ ngồi trên máy bay</h1>
+  <header class="site-header">
+    <a href="../index.html" class="logo">
+      <img src="../assets/Lotus_Logo-removebg-preview.png">
+      <span>Lotus Travel</span>
+    </a>
+  </header>
+
+  <main class="page-content">
+    <h1>Chọn chỗ ngồi trên máy bay</h1>
   <div class="note">
     <p>Chọn chỗ ngồi mong muốn của bạn</p>
     <p>Ghế đã chọn sẽ được tô màu vàng</p>
@@ -54,6 +62,7 @@
       </div>
       <button id="confirmSeat">Xác nhận chỗ ngồi</button>
   </section>
+  </main>
 
   <script src="../javascript/seat-selection.js"></script>
 </body>
