--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                         <div class="booking-group" id="return-date">
                             <label>Ngày về</label>
-                            <input type="date">
+                            <input type="date" id="return-time">
                         </div>
 
                         <div class="booking-group passenger-group">
