--- a/pages/booking.html
+++ b/pages/booking.html
@@ -16,7 +16,7 @@
   </header>
 
   <main class="page-content">
-    <h1>Vui lòng chọn chuyến đi</h1>
+    <h1>Vui lòng chọn chuyến bay</h1>
     <div class="select_flight">
       <div id="flight-list" class="flight-list"></div>
     </div>
