--- a/pages/checkin.html
+++ b/pages/checkin.html
@@ -18,6 +18,7 @@
         <section class="checkin-container">
         <!-- <h2>Thông tin chuyến bay</h2> -->
         <div id="checkin-detail"></div>
+        <div id="checkin-options"></div>
         <button class="btn" id="btn-confirm-checkin">
             Xác nhận làm thủ tục lên máy bay
         </button>
