--- a/pages/managebooking.html
+++ b/pages/managebooking.html
@@ -15,7 +15,7 @@
     </header>
     <div class="page-content">
         <section class="managebooking-container">
-            <h2>Thông tin chuyến bay</h2>
+            <h2>Chuyến bay của bạn</h2>
             <div id="managebooking-detail"></div>
         </section>
     </div>
